<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/poolRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_soft_depth"
    android:fitsSystemWindows="true"
    tools:context=".pool.PoolActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/playerColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:gravity="start">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <FrameLayout
            android:id="@+id/gameAvatarAnchor"
            android:layout_width="80dp"
            android:layout_height="58dp" />

        <TextView
            android:id="@+id/youLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/you"
            android:textColor="#CCFFFFFF"
            android:textSize="18sp" />
            </LinearLayout>

        <ImageView
            android:id="@+id/playerBallType"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="28dp"
            android:src="@drawable/pool_ball_empty"
            android:contentDescription="@null"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/oppColumn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="44dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <FrameLayout
            android:id="@+id/oppAvatarAnchor"
            android:layout_width="80dp"
            android:layout_height="58dp" />

        <ImageView
            android:id="@+id/oppBallType"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/pool_ball_empty"
            android:contentDescription="@null"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/leftRail"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="start|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <FrameLayout
            android:id="@+id/cueContainer"
            tools:ignore="UselessParent"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/cue_drag_bg"
            android:clipChildren="false"
            android:rotation="-90">

            <FrameLayout
                android:id="@+id/cueTrackClip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cue_drag_bg"
                android:outlineProvider="background">

                <View
                    android:id="@+id/cueTrack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ff333333" />
            </FrameLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="36.67dp"
                android:background="#66FFFFFF" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="73.33dp"
                android:background="#66FFFFFF" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="110dp"
                android:background="#66FFFFFF" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="146.67dp"
                android:background="#66FFFFFF" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="183.33dp"
                android:background="#66FFFFFF" />

            <ImageView
                android:id="@+id/cueTip"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/cue1" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/rightRail"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <LinearLayout
            android:id="@+id/rightRailStack"
            tools:ignore="UselessParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/nineBallBar"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/cueView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/cue_item_3d"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/cueDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/cue_point" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone" />

    <TextView
        android:id="@+id/state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#77000000"
        android:padding="10dp"
        android:text="@string/waiting"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/skip_replay"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/skip_replay" />

    <FrameLayout
        android:id="@+id/cueOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/cuePopup"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:background="@drawable/cue_item_popup_3d"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/cuePopupDot"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                app:srcCompat="@drawable/cue_point" />
        </FrameLayout>
    </FrameLayout>

    <ImageButton
        android:id="@+id/rulesButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:alpha="0.7"
        android:contentDescription="@string/rules"
        android:scaleType="fitCenter"
        android:padding="6dp" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:alpha="0.7"
        android:contentDescription="@string/settings"
        android:scaleType="fitCenter"
        android:padding="6dp" />

</FrameLayout>